...
    android:layout_height="match_parent"
    android:id="@+id/scrollView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraint_layout">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_title_small"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/corps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_hor_normal"
            android:layout_marginEnd="@dimen/margin_hor_normal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/covid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <TextView
                android:id="@+id/corps_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_corps_1"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/corps_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_corps_2"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/corps_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_corps_3"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/corps_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_corps_4"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/corps_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_corps_5"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/corps_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_corps_6"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/github_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/margin_fab_normal"
            android:clickable="true"
            android:focusable="true"
...
