<resources>
    <!-- Non translatable -->
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="stop" translatable="false">Stop</string>

    <!-- Translatable -->
    <string name="app_name">Youpidapp</string>
    <string name="home">Accueil</string>
    <string name="type">Type de lecture</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="search">Rechercher</string>

    <!-- Discotheque -->
    <string-array name="types">
        <item>@string/type1</item>
        <item>@string/type2</item>
        <item>@string/type3</item>
        <item>@string/type4</item>
    </string-array>
    <string name="type1">1 seul à la fois</string>
    <string name="type2">En même temps</string>
    <string name="type3">Un après l\'autre</string>
    <string name="type4">Boucler le son</string>

    <!-- Buttons -->
    <string name="create_widget">Créer le widget</string>
    <string name="random">Random</string>
    <string name="pilou">Pilou</string>
    <string name="on_aime_pas">On aime pas</string>
    <string name="pilou_concentre">Pilou (concentré)</string>
    <string name="pilou_rapide">Pilou (rapide)</string>
    <string name="tu_as_compris_michel">Compris Michel ?</string>
    <string name="fais_confiance">Fais confiance</string>
    <string name="meme_chose">Même chose</string>
    <string name="relax_michel">Relax Michel</string>

    <!-- AboutFragment -->
    <string name="about_title">À propos</string>
    <string name="about_corps_1">
        Pilou pilou bonjour ! On a juste deux mots à vous causer, vous qui avez téléchargé cette app.
        Si vous ne savez pas qui est monsieur Vincent Legat ou ce qu\'est l\'EPL, c\'est que cette application ne vous est peut-être pas destinée !
    </string>

    <string name="about_corps_2">
        Dans le cas contraire, bienvenue !
        Tous les extraits audio disponibles proviennent de vidéos Youtube postées par le Professeur Vincent Legat (non nous ne l\'avons pas enregistré à son insu),
        le lien vers sa chaîne est disponible en dessous.
        Nous tenons également à dire que cette application est à but purement humoristique, nous ne gagnons pas d\'argent grâce à celle-ci.
        Elle n\'a pas non plus été réalisée dans un but de se moquer, bien au contraire ! L\'un d\'entre nous a même été son étudiant pendant plusieurs années.
        Nous aimons beaucoup les cours donnés par monsieur Legat qui sont toujours très vivants et dynamiques, en partie grâce à l\'humour qu\'il apporte.
    </string>

    <string name="about_corps_3">
        Cette application est simplement un hommage à son travail d\'enseignant.
    </string>

    <string name="about_corps_4">
        Si vous nous lisez monsieur, nous espérons que cette app vous ait plu, nous sommes vraiment deux grands fans.
        Nous serions attristés si vous le décidez, mais si vous voulez qu\'on retire l\'application ou certains extraits audio, n\'hésitez pas à nous contacter par mail.
        Si au contraire vous avez des suggestions à faire, n\'hésitez pas non plus à nous en faire part.
    </string>

    <string name="about_corps_5">
        L\'app est complètement open-source sous license GPLv3 à part les extraits audio (et les dessins) qui restent la propriété du Professeur Vincent Legat.
        Vous pouvez contribuer en vous rendant sur le github associé (appuyez sur l\'icone plus bas ).
        Certains extraits de musique sont utilisés sous license et ne sont pas libres de droit. Plus d\'infos sur github dans le fichier "LICENSE MUSICS" dans le dossier racine.
        (Cela étant dit, ils viennent tous de https://incompetech.filmmusic.io d\'où proviennent 85% des musiques utilisées sur internet)
    </string>

    <string name="about_corps_6">
        Des bisous et Youpidou!
    </string>
    <!--  on utilisera peut-être pas, mais au cas où ces lignes de texte existent  -->
    <string name="copyright_notice">
        Le code de l\'app est sous licence open-source GNU GPLv3
        Heartbreaking by Kevin MacLeod
        Link: https://incompetech.filmmusic.io/song/3863-heartbreaking
        License: https://filmmusic.io/standard-license
    </string>
    <string name="content_descr_github_fab">bouton github</string>
    <string name="content_descr_youtube_fab">bouton youtube</string>
    <string name="content_descr_covid">petit covid</string>

    <!-- Boitefragment -->
    <string name="boite_title">Buzzers</string>
    <string name="boite_title_text">Boites à son aléatoires</string>
    <string name="buzzer_pilou">Pilou\n\n</string>
    <string name="buzzer_piou">Piou\n\n</string>
    <string name="buzzer_youpidou">Youpidou\n\n</string>
    <string name="buzzer_youtube">Youtube\n\n</string>
    <string name="buzzer_exterminate">EXTERMINATE\n\n</string>

    <!-- parameters -->
    <string name="parameters">Paramètres</string>
    <string name="default_parameters">défaut</string>
    <string name="pitch">Hauteur du son</string>
    <string name="open_app_on_favorites">Ouvrir l\'app sur les favoris</string>

    <string name="favorites">Favoris</string>

    <!-- contact -->
    <string name="contact_title">Contact</string>
    <string name="formulaire_son">Formulaire Son</string>
    <string name="formulaire_bug">Formulaire Bug</string>
    <string name="formulaire_feedback">Formulaire Feeback</string>
    <string name="submit_a_sound">Soumettez nous un son via le formulaire ci-dessous.</string>
    <string name="submit_a_bug">Faites nous part d\'un bug via le formulaire ci-dessous.</string>
    <string name="submit_a_feedback">Donnez nous un feedback, ou demandez nous une nouvelle feature via le formulaire ci-dessous.</string>

    <!-- Themas -->
    <string-array name="theme_modes">
        <item>@string/day_mode</item>
        <item>@string/night_mode</item>
    </string-array>
    <string name="night_mode">Thème sombre</string>
    <string name="day_mode">Thème clair</string>
</resources>